--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<title>webpack-cli</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<h1>开箱即用的webpack脚手架</h1>
-<script type="text/javascript" src="js/index.js"></script>
+<div id="container"></div>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
